--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,14 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-remote-theme
+
+title: Khoa Pham
+logo: /assets/img/headshot_circle.png
+#description: text below image
+show_downloads: true
+theme: jekyll-theme-minimal
+
+author:
+  name: John Doe
+  email: john.doe@example.com
+  twitter_username: johndoe 
