--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@ plugins:
 - jekyll-remote-theme
 
 title: Khoa Pham
-logo: /assets/img/headshot_circle.png
-#description: text below image
+logo: /assets/img/My Portrait.png
+description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
 
 author:
-  name: John Doe
-  email: john.doe@example.com
-  twitter_username: johndoe 
+  name: Khoa Pham
+  email: kdpham1002@gmail.com
+
