--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ plugins:
 - jekyll-remote-theme
 
 title: Khoa Pham
-logo: /assets/img/My Portrait.png
+logo: /assets/img/My Portrait_small.png
 description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
@@ -11,4 +11,3 @@ theme: jekyll-theme-minimal
 author:
   name: Khoa Pham
   email: kdpham1002@gmail.com
-
