Enhance README.md with additional leadership experience and improve formatting; update _config.yml to comment out description line

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ plugins:
 
 title: Khoa Pham
 logo: /assets/img/My Portrait_small.png
-description: text below image
+# description: text below image
 # show_downloads: true
 theme: jekyll-theme-minimal
