--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,13 @@ logo: /images/My Portrait.png
 description: All Data Science Projects go here!
 # show_downloads: true
 theme: jekyll-theme-minimal
+
+social_links:
+  - name: GitHub
+    url: https://github.com/yourusername
+  - name: LinkedIn
+    url: https://www.linkedin.com/in/yourusername/
+  - name: Tableau
+    url: https://public.tableau.com/profile/yourusername
+  - name: Twitter
+    url: https://twitter.com/yourusername
