Update description in _config.yml to include location information

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ plugins:
 
 title: Khoa Pham
 logo: /images/My Portrait.png
-description: kdpham@umass.edu | 714-858-7494
+description: kdpham@umass.edu|714-858-7494|Los Angeles, CA
 show_downloads: true
 theme: jekyll-theme-minimal
