--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ plugins:
 
 title: Khoa Pham
 logo: /images/My Portrait.png
-description: 714-858-7494 | kdpham1002@gmail.com | Los Angeles, CA
+description: 714-858-7494 | kdpham@umass.edu | Los Angeles, CA
 show_downloads: true
 theme: jekyll-theme-minimal
