Update contact information in README.md and _config.yml: change email address and adjust description

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ plugins:
 
 title: Khoa Pham
 logo: /images/My Portrait.png
-description: 714-858-7494 | kdpham@umass.edu | Los Angeles, CA
+description: kdpham1002@gmail.com (Personal Email)
 show_downloads: true
 theme: jekyll-theme-minimal
