Update description in _config.yml: simplify email label

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ plugins:
 
 title: Khoa Pham
 logo: /images/My Portrait.png
-description: kdpham1002@gmail.com (Personal Email)
+description: kdpham1002@gmail.com (Personal)
 show_downloads: true
 theme: jekyll-theme-minimal
