Comment out remote_theme and plugins in _config.yml for future reference

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme
+# remote_theme: pages-themes/minimal@v0.2.0
+# plugins:
+# - jekyll-remote-theme
 
 title: Khoa Pham
 logo: /assets/My Portrait.png
