--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,6 @@ plugins:
 title: Khoa Pham
 logo: /assets/My Portrait.png
 description: kdpham1002@gmail.com (Personal)
+Los Angeles, CA
 # show_downloads: true
 theme: jekyll-theme-minimal
