--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ plugins:
 title: Khoa Pham
 logo: /assets/My Portrait.png
 description: kdpham1002@gmail.com (Personal)
-description: Los Angeles, CA
+- dfadf
 # show_downloads: true
 theme: jekyll-theme-minimal
