--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ plugins:
 title: Khoa Pham
 logo: /assets/My Portrait.png
 description: kdpham1002@gmail.com (Personal)
-- dfadf
+jkjnm
+nm,
 # show_downloads: true
 theme: jekyll-theme-minimal
