Update README.md and _config.yml: improve layout of contact links and add placeholder text

--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,8 @@ plugins:
 title: Khoa Pham
 logo: /assets/My Portrait.png
 description: kdpham1002@gmail.com (Personal)
+- fhfhfh
+gjgjg
+
 # show_downloads: true
 theme: jekyll-theme-minimal
