Update README.md, _config.yml, and another-page.md: add new links, improve layout, and enhance content structure

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,10 @@ plugins:
 
 title: Khoa Pham
 logo: /assets/My Portrait.png
-description: kdpham1002@gmail.com (Personal)
-- fhfhfh
+description:
+- kdpham1002@gmail.com (Personal)
+- asd
+fhfhfh
 gjgjg
 
 # show_downloads: true
