--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ title: Khoa Pham
 logo: /assets/My Portrait.png
 description:
   - kdpham1002@gmail.com (Personal)
-  - 714-858-7494 (Phone Number)
+  - Los Angeles, CA
+  - I am a dedicated data scientist with a strong foundation in business analytics and informatics from the University of Massachusetts, Amherst. Proficient in Python, SQL, R, and Tableau, I have applied my skills to real-world projects in finance, mental health research, and web programming. My professional experience includes roles as a Data Assistant and Research Assistant, where I honed my data analysis and communication skills. I am passionate about leveraging data to drive insights and support decision-making processes, and I am eager to contribute to impactful projects within a dynamic team.
 # show_downloads: true
 theme: jekyll-theme-minimal
