Update _config.yml: add missing period for improved sentence structure

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description:
   - kdpham1002@gmail.com (Personal)
   - Los Angeles, CA
   -
-  - • I am a Masters student with Data Science and Business Analyst major
+  - • I am a Masters student with Data Science and Business Analyst major.
   - • Skilled in Python, SQL, R, and Tableau. I'm learning Data Engineering/Big Data skills.
   - • I have experiences in finance, mental health research, and web programming projects.
   - • My roles as a Data Assistant and Research Assistant have refined my data analysis and communication skills.
