Update _config.yml: remove bullet points for a cleaner personal description

--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ description:
   - kdpham1002@gmail.com (Personal)
   - Los Angeles, CA
   -
-  - • 🎓 I'm a Master’s student majoring in Data Science and Business Analytics.
-  - • 💼 I have experiences in finance, mental health research, and web programming projects.
-  - • 🧑‍💻 Skilled in Python, SQL, R, and Tableau. I'm learning Data Engineering/Big Data skills.
-  - • 📈 My roles as a Data Assistant and Research Assistant have refined my data analysis and communication skills.
-  - • 📊 I'm passionate about using data to drive insights and support decision-making.
+  - 🎓 I'm a Master’s student majoring in Data Science and Business Analytics.
+  - 💼 I have experiences in finance, mental health research, and web programming projects.
+  - 🧑‍💻 Skilled in Python, SQL, R, and Tableau. I'm learning Data Engineering/Big Data skills.
+  - 📈 My roles as a Data Assistant and Research Assistant have refined my data analysis and communication skills.
+  - 📊 I'm passionate about using data to drive insights and support decision-making.
 
 # show_downloads: true
 theme: jekyll-theme-minimal
