Update personal description in _config.yml for clarity and conciseness

--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,9 @@ description:
   - Los Angeles, CA
   -
   - 🎓 I'm a Master's student majoring in Data Science and Business Analytics.
-  - 💼 I have experiences in finance, mental health research, and web programming projects.
-  - 🧑‍💻 Skilled in Python, SQL, R, and Tableau. I'm learning Data Engineering/Big Data skills.
-  - 📈 My roles as a Data Assistant and Research Assistant have refined my data analysis and communication skills.
   - 📊 I'm passionate about using data to drive insights and support decision-making.
+  - 📈 My experiences in finance, healthcare refined my data analysis and research skills.
+  - 🧑‍💻 Skilled in Python, SQL, R, Tableau but I'm learning Data Engineering/Big Data skills.
 
 # show_downloads: true
 theme: jekyll-theme-minimal
