--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,14 @@ plugins:
 title: Khoa Pham
 logo: /assets/img/My Portrait.jpg
 description:
-  - kdpham1002@gmail.com (Personal)
   - Los Angeles, CA
+  -
+  - 📫 Also reach me at my personal email kdpham1002@gmail.com
   -
   - 🎓 I'm a Master's student majoring in Data Science and Business Analytics.
   - 📊 I'm passionate about using data to drive insights and support decision-making.
   - 📈 My experiences in finance, healthcare refined my data analysis and research skills.
-  - 🧑‍💻 Skilled in Python, SQL, R, Tableau but I'm also learning Data Engineering skills.
+  - 🧑‍💻 Skilled in Python, SQL, R, Tableau but I'm also learning Data Engineering skills and Big Data technologies.
 
 # show_downloads: true
 theme: jekyll-theme-minimal
