--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ plugins:
 title: Khoa Pham
 logo: /assets/img/My Portrait.jpg
 description:
-  - Los Angeles, CA
+  - 📍 Los Angeles, CA
   -
   - 📫 Also reach me at my personal email kdpham1002@gmail.com
   -
