--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,5 @@ description:
   - 📈 My experiences in finance, healthcare refined my data analysis and research skills.
   - 🧑‍💻 Skilled in Python, SQL, R, Tableau but I'm also learning Data Engineering skills and Big Data technologies.
 
-# show_downloads: true
+show_downloads: true
 theme: jekyll-theme-minimal
