Fix email formatting in config for consistency

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ logo: /assets/img/My Portrait.jpg
 description:
   - 📍 Los Angeles, CA
   -
-  - 📫 Also reach me at my personal email - kdpham1002@gmail.com
+  - 📫 Also reach me at my personal email kdpham1002@gmail.com
   -
   - 🎓 I'm a Master's student majoring in Data Science and Business Analytics.
   - 📊 I'm passionate about using data to drive insights and support decision-making.
