Update email formatting in config and refactor header styles for improved layout

--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@ logo: /assets/img/My Portrait.jpg
 description:
   - 📍 Los Angeles, CA
   -
-  - 📫 Also reach me at my personal email kdpham1002@gmail.com
-  -
   - 🎓 I'm a Master's student majoring in Data Science and Business Analytics.
   - 📊 I'm passionate about using data to drive insights and support decision-making.
   - 📈 My experiences in finance, healthcare refined my data analysis and research skills.
   - 🧑‍💻 Skilled in Python, SQL, R, Tableau but I'm also learning Data Engineering skills and Big Data technologies.
+  -
+  - 📧 Also reach me at my personal email kdpham1002@gmail.com
 
 show_downloads: true
 theme: jekyll-theme-minimal
