--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description:
   - 📈 My experiences in finance, healthcare refined my data analysis and research skills.
   - 🧑‍💻 Skilled in Python, SQL, R, Tableau but I'm also learning Data Engineering skills and Big Data technologies.
   -
-  - 📧 Also reach me at my personal email kdpham1002@gmail.com
+  - 💌 Also reach me at my personal email kdpham1002@gmail.com
 
 show_downloads: true
 theme: jekyll-theme-minimal
