--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-title: Khoa D Pham
+title: Khoa Pham
 logo: /assets/img/My Portrait.jpg
 description:
   - 📍 Los Angeles, CA
