Update description in config for clarity and adjust strong element styles for consistency

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ plugins:
 title: Khoa Pham
 logo: /assets/img/My Portrait.jpg
 description:
-  - 📍 Los Angeles, CA
+  - 📍 Based in Los Angeles, CA
   -
   - 🎓 I'm a Master's student majoring in Data Science and Business Analytics.
   - 📊 I'm passionate about using data to drive insights and support decision-making.
