--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Khoa Pham
 logo: /assets/img/My Portrait.jpg
 description:
   - 📍 Based in Los Angeles, CA
-  - 💌 Also reach me at my personal email kdpham1002@gmail.com
+  - 💌 Reach me at: kdpham1002@gmail.com
   -
   - 🎓 I'm a Master's student majoring in Data Science and Business Analytics.
   - 📊 I'm passionate about using data to drive insights and support decision-making.
