Update skills description in _config.yml to reflect learning in Cloud technologies

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description:
   - 🎓 I'm a Master's student majoring in Data Science and Business Analytics.
   - 📊 I'm passionate about using data to drive insights and support decision-making.
   - 📈 My experiences in finance, healthcare refined my data analysis and research skills.
-  - 🧑‍💻 Skilled in Python, SQL, R, Tableau but I'm also learning Data Engineering skills and Big Data technologies.
+  - 🧑‍💻 Skilled in Python, SQL, R, Tableau but I'm also learning Data Engineering skills and Cloud technologies.
 
 show_downloads: true
 theme: jekyll-theme-minimal
