Add additional contact information and LinkedIn link to config

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ logo: /assets/img/My Portrait.jpg
 description:
   - 📍 Based in Los Angeles, CA
   - 💌 kdpham1002@gmail.com (Personal)
+  - 📧 kdpham@umass.edu (School)
+  - 📞 (714) 858-7494
+  - 🤙 [LinkedIn](https://www.linkedin.com/in/khoapham1002/)
   -
   - 🎓 I'm a Master's student majoring in Data Science and Business Analytics.
   - 📊 I'm passionate about using data to drive insights and support decision-making.
