Refine wording in personal description for improved clarity

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description:
   -
   - 🎓 I'm a Master's student majoring in Data Science and Business Analytics.
   - 📊 I'm passionate about using data to uncover insights and support strategic decision-making.
-  - 📈 My experience in finance and healthcare helped me strengthen my data analysis and research skills.
+  - 📈 My experience in finance and healthcare has helped me strengthen my data analysis and research skills.
   - 🧑‍💻 Proficient in Python, SQL, R, and Tableau, and currently advancing my skills in Data Engineering and Cloud technologies.
 
 # show_downloads: true
