--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description:
   - 📧 kdpham@umass.edu (School)
   - 📞 (714) 858-7494
   -
-  - 🎓 I'm a Master's student majoring in Data Science and Business Analytics.
+  - 🎓 I'm a Master's student majoring in Business Analytics and Data Science.
   - 📊 I'm passionate about using data to uncover insights and support strategic decision-making.
   - 📈 My experience in finance and healthcare has helped me strengthen my data analysis and research skills.
   - 🧑‍💻 Proficient in Python, SQL, R, and Tableau, and currently advancing my skills in Data Engineering and Cloud technologies.
